[gd_scene load_steps=23 format=3 uid="uid://c7j8k3lm4npqr"]

[ext_resource type="PackedScene" uid="uid://byvmfjh5xnbcq" path="res://scenes/entities/player.tscn" id="1_player"]
[ext_resource type="Script" path="res://scripts/world/tile_map_manager.gd" id="2_tilemap"]
[ext_resource type="PackedScene" uid="uid://cq8rm4tn5uvwx" path="res://scenes/ui/hud.tscn" id="3_hud"]
[ext_resource type="PackedScene" uid="uid://bx9cy8dz0e1fg" path="res://scenes/ui/pause_menu.tscn" id="4_pause"]
[ext_resource type="PackedScene" uid="uid://cvt8h5kn2x9wp" path="res://scenes/ui/inventory_ui.tscn" id="5_inventory"]
[ext_resource type="PackedScene" uid="uid://bs5jd8h3m9k2p" path="res://scenes/ui/market_ui.tscn" id="6_market"]
[ext_resource type="Script" path="res://scripts/world/game_world_controller.gd" id="7_controller"]
[ext_resource type="Script" path="res://scripts/npcs/journal_system.gd" id="8_journal_system"]
[ext_resource type="PackedScene" uid="uid://b8k3m7n2p5qvj" path="res://scenes/ui/journal_ui.tscn" id="9_journal_ui"]
[ext_resource type="PackedScene" uid="uid://cqw8x5y9z4abc" path="res://scenes/ui/codex_ui.tscn" id="10_codex_ui"]
[ext_resource type="PackedScene" uid="uid://tech_tree_ui_blueth" path="res://scenes/ui/tech_tree_ui.tscn" id="11_tech_tree_ui"]
[ext_resource type="PackedScene" uid="uid://b2vhq8xp5nk7w" path="res://scenes/ui/settings_menu.tscn" id="12_settings"]
[ext_resource type="PackedScene" uid="uid://nursery_ui_scene" path="res://scenes/ui/nursery_ui.tscn" id="13_nursery_ui"]
[ext_resource type="PackedScene" uid="uid://quest_log_scene" path="res://scenes/ui/quest_log.tscn" id="14_quest_log"]
[ext_resource type="PackedScene" uid="uid://town_investment_ui" path="res://scenes/ui/town_investment_ui.tscn" id="15_town_ui"]
[ext_resource type="PackedScene" uid="uid://carbon_dashboard_ui" path="res://scenes/ui/carbon_dashboard.tscn" id="16_carbon_ui"]
[ext_resource type="Script" path="res://scripts/farming/nursery_system.gd" id="17_nursery"]
[ext_resource type="Script" path="res://scripts/npcs/quest_system.gd" id="18_quest"]
[ext_resource type="Script" path="res://scripts/progression/tutorial_system.gd" id="19_tutorial"]
[ext_resource type="Script" path="res://scripts/progression/year_progression.gd" id="20_year"]
[ext_resource type="Script" path="res://scripts/ui/notification_system.gd" id="21_notification"]
[ext_resource type="PackedScene" uid="uid://dialogue_box_ui_001" path="res://scenes/ui/dialogue_box.tscn" id="22_dialogue"]
[ext_resource type="Script" path="res://scripts/npcs/npc_manager.gd" id="23_npc_manager"]
[ext_resource type="PackedScene" uid="uid://tutorial_tooltip_ui_001" path="res://scenes/ui/tutorial_tooltip.tscn" id="24_tutorial_tooltip"]
[ext_resource type="Script" path="res://scripts/npcs/quest_event_bridge.gd" id="25_quest_bridge"]
[ext_resource type="Script" path="res://scripts/npcs/relationship_system.gd" id="26_relationship"]

[node name="GameWorld" type="Node2D"]
script = ExtResource("7_controller")

[node name="TileMapManager" type="Node" parent="." groups=["tile_map_manager"]]
script = ExtResource("2_tilemap")

[node name="WorldRenderer" type="Node2D" parent="."]
script = preload("res://scripts/world/world_renderer.gd")

[node name="TileMapVisual" type="TileMap" parent="."]
format = 2
layer_0/name = "Water"
layer_0/tile_data = PackedInt32Array()
layer_1/name = "Substrate"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Vegetation"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()

[node name="PlantingSystem" type="Node" parent="."]
script = preload("res://scripts/farming/planting_system.gd")

[node name="GrowthSystem" type="Node" parent="."]
script = preload("res://scripts/farming/growth_system.gd")

[node name="HarvestSystem" type="Node" parent="."]
script = preload("res://scripts/farming/harvest_system.gd")

[node name="Player" parent="." instance=ExtResource("1_player")]
position = Vector2(576, 324)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
zoom = Vector2(1.5, 1.5)

[node name="HUD" parent="." instance=ExtResource("3_hud")]

[node name="PauseMenu" parent="." instance=ExtResource("4_pause")]

[node name="InventoryUI" parent="." instance=ExtResource("5_inventory")]

[node name="MarketUI" parent="." instance=ExtResource("6_market")]

[node name="JournalSystem" type="Node" parent="." groups=["journal_system"]]
script = ExtResource("8_journal_system")

[node name="JournalUI" parent="." instance=ExtResource("9_journal_ui")]

[node name="CodexUI" parent="." instance=ExtResource("10_codex_ui")]

[node name="TechTreeUI" parent="." instance=ExtResource("11_tech_tree_ui")]

[node name="SettingsMenu" parent="." instance=ExtResource("12_settings")]

[node name="WeatherSystem" type="Node" parent="."]
script = preload("res://scripts/world/weather_system.gd")

[node name="NurserySystem" type="Node" parent="." groups=["nursery_system"]]
script = ExtResource("17_nursery")

[node name="QuestSystem" type="Node" parent="." groups=["quest_system"]]
script = ExtResource("18_quest")

[node name="RelationshipSystem" type="Node" parent="." groups=["relationship_system"]]
script = ExtResource("26_relationship")

[node name="TutorialSystem" type="Node" parent="." groups=["tutorial_system"]]
script = ExtResource("19_tutorial")

[node name="YearProgressionSystem" type="Node" parent="."]
script = ExtResource("20_year")

[node name="NotificationSystem" type="Node" parent="."]
script = ExtResource("21_notification")

[node name="MarketSystem" type="Node" parent="."]
script = preload("res://scripts/economy/market_system.gd")

[node name="TownInvestmentSystem" type="Node" parent="."]
script = preload("res://scripts/economy/town_investment.gd")

[node name="EcoTourismSystem" type="Node" parent="."]
script = preload("res://scripts/economy/eco_tourism.gd")

[node name="TechTree" type="Node" parent="."]
script = preload("res://scripts/research/tech_tree.gd")

[node name="NurseryUI" parent="." instance=ExtResource("13_nursery_ui")]

[node name="QuestLog" parent="." instance=ExtResource("14_quest_log")]

[node name="TownInvestmentUI" parent="." instance=ExtResource("15_town_ui")]

[node name="CarbonDashboard" parent="." instance=ExtResource("16_carbon_ui")]

[node name="DialogueBox" parent="." instance=ExtResource("22_dialogue")]

[node name="NPCManager" type="Node" parent="." groups=["npc_manager"]]
script = ExtResource("23_npc_manager")

[node name="QuestEventBridge" type="Node" parent="." groups=["quest_event_bridge"]]
script = ExtResource("25_quest_bridge")

[node name="TutorialTooltip" parent="." instance=ExtResource("24_tutorial_tooltip")]
